--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Treehouse Presents . . .</a>
+      <a class="navbar-brand" href="#">DukeDesign Presents . . .</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -200,8 +200,8 @@
       <hr>
       <div class="row py-4 text-muted">
         <div class="col-md-6 col-xl-5">
-          <p><strong>About Treehouse</strong></p>
-          <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
+          <p><strong>About DukeDesign</strong></p>
+          <p>Lorem ipsum dolor sit amet, eu enim impetus mel. Inani erant cu eam, ei ius quis novum electram. Cu congue eripuit gloriatur eos.</p>
         </div>
         <div class="col-md-6 col-xl-5 offset-xl-2">
           <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
@@ -241,8 +241,8 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-5 text-md-right">
-          <small>&copy; 2016 Full Stack Conf &amp; Treehouse</small>
+        <div class="col-md-5 text-md-right text-sm-center">
+          <small id="copy">&copy; 2017 Full Stack Conf &amp; DukeDesign</small>
         </div>
       </div><!-- /footer -->
 
